[package]
name = "atomize"
version = "0.1.1"
authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
description = "Elixir style atoms / symbols"
readme = "README.md"
repository = "https://github.com/BrokenLamp/atomize-rs"
keywords = ["atom", "atoms", "symbol", "symbols", "elixir"]
license = "MIT"
edition = "2018"

[dependencies]
proc-macro-hack = "0.5.11"
atomize-macro = { version = "0.1.0", path = "./atomize-macro" }
