[package]
authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
description = "Elixir style atoms / symbols"
edition = "2021"
keywords = ["atom", "atoms", "symbol", "symbols", "elixir"]
license = "MIT"
name = "atomize"
readme = "README.md"
repository = "https://github.com/BrokenLamp/atomize-rs"
version = "0.1.3"

[dependencies]
atomize-macro = {version = "0.1.3", path = "./atomize-macro"}

[workspace]
members = ["atomize-macro"]
resolver = "2"
